--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "test": "jest --verbose --runInBand --setupFiles dotenv/config"
   },
   "author": "",
   "license": "ISC",
@@ -23,5 +24,8 @@
     "mongoose": "^5.13.3",
     "nodemon": "^2.0.12",
     "prettier": "^2.4.1"
+  },
+  "devDependencies": {
+    "jest": "^27.2.2"
   }
 }
