--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose --runInBand --setupFiles dotenv/config",
     "start": "node index.js",
-    "dev": "nodemon",
-    "test": "jest --verbose --runInBand --setupFiles dotenv/config"
+    "dev": "nodemon"
   },
   "author": "",
   "license": "ISC",
