--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prettier": "^2.4.1"
   },
   "devDependencies": {
-    "jest": "^27.2.2"
+    "jest": "^27.2.2",
+    "supertest": "^6.1.6"
   }
 }
