--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --verbose --runInBand --setupFiles dotenv/config",
+    "test": "jest --verbose --coverage --runInBand --setupFiles dotenv/config",
     "start": "node index.js",
     "dev": "nodemon"
   },
